re PR c/35440 (ICE resulting in completely broken diagnostic)

PR c/35440
	* c-pretty-print.c (pp_c_initializer_list): Handle CONSTRUCTOR
	for all types.

	* gcc.dg/pr35440.c: New test.

From-SVN: r133897